--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI = mongodb+srv://vijay:vijay123123@cluster0.76a7k.mongodb.net/inventory-bill-app
+MONGO_URI = mongodb+srv://vijay:vijay123123@cluster0.76a7k.mongodb.net/test
